syntax = "proto3";

package bookstore;

option go_package = "bookstore/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// 一套简单的书店API
// 这套API管理着书架和图书资源.书架包含图书.
service Bookstore {
  // 返回书店中所有书架的列表
  rpc ListShelves(google.protobuf.Empty) returns (ListShelvesResponse) {
    // 定义HTTP映射
    // Client example (假设你的服务域名是'DOMAIN_NAME');
    // curl http://DOMAIN_NAME/v1/shelves
    option (google.api.http) = {get: "/v1/shelves"};
  }
  // 在书店中创建一个新的书架
  rpc CreateShelf(CreateShelfRequest) returns (Shelf) {
    // Client example:
    // curl -d '{"theme":"Music"}'  http://DOMAIN_NAME/v1/shelves
    option (google.api.http) = {
      post: "/v1/shelves"
      body: "shelf"
    };
  }
  // 返回书店中指定的书架
  rpc GetShelf(GetShelfRequest) returns (Shelf) {
    // Client example - 返回第1个书架:
    // curl http://DOMAIN_NAME/v1/shelves/1
    option (google.api.http) = {get: "/v1/shelves/{shelf}"};
  }
  // 删除书架, 包括书架上存储的所有图书
  rpc DeleteShelf(DeleteShelfRequest) returns (google.protobuf.Empty) {
    // Client example - 删除第2个书架:
    // curl http://DOMAIN_NAME/v1/shelves/2
    option (google.api.http) = {delete: "/v1/shelves/{shelf}"};
  }
  //返回书架上的图书列表。
  rpc ListBooks(ListBooksRequest)returns(ListBooksResponse){
    //Client  example-列出第一个书架上的图书：
    // curl  http://DOMAIN_NAME/v1/shelves/1/books
    option(google.api.http) = {get:"/v1/shelves/{shelf}/books"};
  };
  //创建一本新图书。
  rpc CreateBook(CreateBookRequest) returns (Book) {
    //Client example-在第一个书架上创建一本新书：
    // curl -d '{"author":"foo","title":"bar"}' http://DOMAIN_NAME/v1/shelves/1/books
    option (google.api.http) = {
      post:"/v1/shelves/{shelf}/books"
      body: "book"
    };
  };
}

message Shelf {
  int64 id = 1;
  string theme = 2;
  int64 size = 3;
}

message Book {
  int64 id = 1;
  string author = 2;
}
message ListShelvesResponse {
  repeated Shelf shelves = 1;
}
message CreateShelfRequest {
  Shelf shelf = 1;
}

message GetShelfRequest {
  int64 shelf = 1;
}

message DeleteShelfRequest {
  int64 shelf = 1;
}


message ListBooksRequest {
  int64 shelf = 1;
  string page_token = 2;
}
message ListBooksResponse{
  repeated Book book = 1;
  string next_page_token = 2;
}

message CreateBookRequest {
  int64 shelf = 1;
  string book = 2;
  string title = 3;
  string author = 4;
}